Fixing paths and answers_json making

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,9 +3,13 @@ cmake_minimum_required(VERSION 3.27)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(SrcFiles
-        ${MY_SRC_DIR}/invertedIndex.cpp
-        ${MY_SRC_DIR}/searchServer.cpp
-        ${MY_SRC_DIR}/converterjson.cpp
+        ../converterjson.h
+        ../converterjson.cpp
+        ../invertedIndex.h
+        ../invertedIndex.cpp
+        ../searchServer.h
+        ../searchServer.cpp
+
 )
 
 set(TestsFiles
@@ -15,5 +19,4 @@ set(TestsFiles
 add_executable(GtestTests ${TestsFiles} ${SrcFiles})
 target_link_libraries(GtestTests nlohmann_json::nlohmann_json GTest::gtest_main)
 include(GoogleTest)
-target_include_directories(GtestTests PUBLIC ${MY_INCLUDE_DIR})
 gtest_discover_tests(GtestTests)
